style: fix 'ControlButton' z-index at 'CareerPaths'

--- a/src/components/Career/CareerPaths/CareerPaths.module.scss
+++ b/src/components/Career/CareerPaths/CareerPaths.module.scss
@@ -87,6 +87,7 @@
 
 .fowardButton,
 .backwardButton {
+  z-index: 10;
   bottom: 9.35rem;
   cursor: pointer;
   position: absolute;
